vendor/vnc/Server.h


typedef enum {
  vnc_Server_PermView = 0x01,
  vnc_Server_PermKeyboard = 0x02,
  vnc_Server_PermPointer = 0x04,
  vnc_Server_PermClipboard = 0x08,
  vnc_Server_PermAnnotation = 0x10,
  vnc_Server_PermSelectDisplay = 0x20,
  vnc_Server_PermListen = 0x40,
  vnc_Server_PermAll = 0x7fffffff
} vnc_Server_Permissions;
typedef struct {
  void
  (*connectionStarted)(void* userData,
                       vnc_Server* server,
                       vnc_Connection* connection);
  void
  (*connectionEnded)(void* userData,
                     vnc_Server* server,
                     vnc_Connection* connection);
} vnc_Server_ConnectionCallback;
typedef struct {
  vnc_bool_t
  (*verifyPeer)(void* userData,
                vnc_Server* server,
                vnc_Connection* connection,
                const char* viewerHexFingerprint,
                const vnc_DataBuffer* viewerRsaPublic);
  vnc_bool_t
  (*isUserNameRequired)(void* userData,
                        vnc_Server* server,
                        vnc_Connection* connection);
  vnc_bool_t
  (*isPasswordRequired)(void* userData,
                        vnc_Server* server,
                        vnc_Connection* connection);
  int
  (*authenticateUser)(void* userData,
                      vnc_Server* server,
                      vnc_Connection* connection,
                      const char* username,
                      const char* password);
} vnc_Server_SecurityCallback;
 typedef struct {
   vnc_bool_t
   (*pointerEventCallback)(void* userData,
                           vnc_Server* server,
                           int x,
                           int y, 
                           int buttonMask,
                           vnc_bool_t isRelative);
   vnc_bool_t
   (*keyEventCallback)(void* userData,
                       vnc_Server* server,
                       int key,
                       vnc_bool_t down);
} vnc_Server_InputEventsCallback;
typedef struct {
  void
  (*agentStarted)(void* userData,
                  vnc_Server* server);
  void
  (*agentStopped)(void* userData,
                  vnc_Server* server);
} vnc_Server_AgentCallback;
VNC_SDK_API vnc_Server*
vnc_Server_create(_In_opt_z_ const char* agentPath);
VNC_SDK_API vnc_Server*
vnc_Server_createService(_In_opt_z_ const char* agentPath);
VNC_SDK_API void
vnc_Server_destroy(vnc_Server* server);
VNC_SDK_API vnc_status_t
vnc_Server_setConnectionCallback(
    vnc_Server* server,
    _In_opt_ const vnc_Server_ConnectionCallback* callback,
    void* userData);
VNC_SDK_API int
vnc_Server_getConnectionCount(vnc_Server* server);
VNC_SDK_API vnc_status_t
vnc_Server_setSecurityCallback(
    vnc_Server* server,
    _In_opt_ const vnc_Server_SecurityCallback* callback,
    void* userData);
VNC_SDK_API vnc_status_t
vnc_Server_setPermissions(vnc_Server* server,
                          vnc_Connection* connection,
                          int perms);
VNC_SDK_API int
vnc_Server_getPermissions(vnc_Server* server, vnc_Connection* connection);
VNC_SDK_API vnc_status_t
vnc_Server_setAgentCallback(
    vnc_Server* server,
    _In_opt_ const vnc_Server_AgentCallback* callback,
    void* userData);
VNC_SDK_API vnc_bool_t
vnc_Server_isAgentReady(vnc_Server* server);
typedef enum {
  vnc_Server_DisconnectAlert = 1,
  vnc_Server_DisconnectReconnect = 2,
} vnc_Server_DisconnectFlags;
VNC_SDK_API void
vnc_Server_disconnectAll(vnc_Server* server,
                         const char* message,
                         int flags);