src/server.rs

#[test]
fn bindgen_test_layout_vnc_Server_InputEventsCallback() {
    assert_eq!(
        ::std::mem::size_of::<vnc_Server_InputEventsCallback>(),
        16usize,
        concat!("Size of: ", stringify!(vnc_Server_InputEventsCallback))
    );
    assert_eq!(
        ::std::mem::align_of::<vnc_Server_InputEventsCallback>(),
        8usize,
        concat!("Alignment of ", stringify!(vnc_Server_InputEventsCallback))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Server_InputEventsCallback>())).pointerEventCallback
                as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Server_InputEventsCallback),
            "::",
            stringify!(pointerEventCallback)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Server_InputEventsCallback>())).keyEventCallback as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Server_InputEventsCallback),
            "::",
            stringify!(keyEventCallback)
        )
    );
}
#[doc = " Callback receiving agent-related notifications for a Server."]
#[doc = ""]
#[doc = " @see vnc_Server_setAgentCallback()."]
#[doc = ""]
#[doc = " @since 1.1"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vnc_Server_AgentCallback {
    #[doc = " Notification that the agent has started."]
    #[doc = ""]
    #[doc = " Note that the agent is normally started automatically as soon as the server"]
    #[doc = " is created via vnc_Server_create() or vnc_Server_createService()."]
    #[doc = ""]
    #[doc = " This callback is optional."]
    pub agentStarted: ::std::option::Option<
        unsafe extern "C" fn(userData: *mut ::std::os::raw::c_void, server: *mut vnc_Server),
    >,
    #[doc = " Notification that the agent has stopped."]
    #[doc = ""]
    #[doc = " This may indicate that the user has logged out or (on Linux) the X server"]
    #[doc = " has stopped."]
    #[doc = ""]
    #[doc = " This callback is optional."]
    pub agentStopped: ::std::option::Option<
        unsafe extern "C" fn(userData: *mut ::std::os::raw::c_void, server: *mut vnc_Server),
    >,
}
#[test]
fn bindgen_test_layout_vnc_Server_AgentCallback() {
    assert_eq!(
        ::std::mem::size_of::<vnc_Server_AgentCallback>(),
        16usize,
        concat!("Size of: ", stringify!(vnc_Server_AgentCallback))
    );
    assert_eq!(
        ::std::mem::align_of::<vnc_Server_AgentCallback>(),
        8usize,
        concat!("Alignment of ", stringify!(vnc_Server_AgentCallback))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Server_AgentCallback>())).agentStarted as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Server_AgentCallback),
            "::",
            stringify!(agentStarted)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Server_AgentCallback>())).agentStopped as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Server_AgentCallback),
            "::",
            stringify!(agentStopped)
        )
    );
}
extern "C" {
    #[doc = " Creates a Server.  Note only one @ref vnc_Server should exist in your"]
    #[doc = " application at a time."]
    #[doc = ""]
    #[doc = " The Server captures the current session, which may be switched-out or"]
    #[doc = " otherwise not visible on the console."]
    #[doc = ""]
    #[doc = " @param agentPath The full path to the @c vncagent executable, or NULL to"]
    #[doc = "     specify that @c vncagent is in the same directory as the app"]
    #[doc = "     binary at run-time.  If you provide a directory, the executable must be"]
    #[doc = "     called @c vncagent (@c vncagent.exe on Windows); if you have renamed"]
    #[doc = "     @c vncagent then the filename must be provided."]
    #[doc = ""]
    #[doc = " @return A new @ref vnc_Server or NULL on error, in which case call"]
    #[doc = "     vnc_getLastError() to get the error code."]
    #[doc = ""]
    #[doc = " @retval FileError"]
    #[doc = "     @c vncagent could not be found, or the file specified does not exist"]
    #[doc = " @retval AgentError"]
    #[doc = "     @c vncagent cannot be executed or its version number does not match that"]
    #[doc = "     of the SDK"]
    #[doc = " @retval UnexpectedCall"]
    #[doc = "     A @ref vnc_Server already exists in your application"]
    #[doc = ""]
    #[doc = " @see Use vnc_Server_createService() to create a Server which captures the"]
    #[doc = "     console."]
    pub fn vnc_Server_create(agentPath: *const ::std::os::raw::c_char) -> *mut vnc_Server;
}
extern "C" {
    #[doc = " Creates a Server running as a service.  Note only one @ref vnc_Server should"]
    #[doc = " exist in your application at a time."]
    #[doc = ""]
    #[doc = " The Server captures the machine's console, which may be a logged-in user"]
    #[doc = " session or a login prompt.  Running as a service requires elevated"]
    #[doc = " privileges, and must be done from a Windows Service (Windows), a launch"]
    #[doc = " daemon (Mac), or a root process (Linux)."]
    #[doc = ""]
    #[doc = " On Windows, the @c vncagent executable must be located within either the"]
    #[doc = " <tt>\\%ProgramFiles\\%</tt> or <tt>\\%ProgramFiles(x86)\\%</tt> directories"]
    #[doc = " in order to allow the injection of secure key sequences (e.g. Ctrl-Alt-Del)."]
    #[doc = ""]
    #[doc = " On Mac OS X, an instance of @c vncagent must separately be run in each"]
    #[doc = " graphical session as a launch agent.  The @p agentPath provided here must"]
    #[doc = " match the path of these launch agents in order that the SDK can communicate"]
    #[doc = " with them."]
    #[doc = ""]
    #[doc = " @param agentPath The path to the @c vncagent executable (see"]
    #[doc = "     vnc_Server_create() for details)."]
    #[doc = ""]
    #[doc = " @return A new @ref vnc_Server or NULL on error, in which case call"]
    #[doc = "     vnc_getLastError() to get the error code."]
    #[doc = ""]
    #[doc = " @retval AgentError"]
    #[doc = "     @c vncagent cannot be found or its version number does not match that"]
    #[doc = "     of the SDK"]
    #[doc = " @retval UnexpectedCall"]
    #[doc = "     A @ref vnc_Server already exists in your application"]
    #[doc = ""]
    #[doc = " @see Use vnc_Server_create() to create a Server which captures the"]
    #[doc = "     current session."]
    #[doc = ""]
    #[doc = " @since 1.1"]
    pub fn vnc_Server_createService(agentPath: *const ::std::os::raw::c_char) -> *mut vnc_Server;
}
extern "C" {
    #[doc = " Destroys the Server."]
    #[doc = ""]
    #[doc = " Any Viewers still connected will be disconnected, and the peer's"]
    #[doc = " @ref vnc_Viewer_CanReconnect flag will be set, indicating that server may"]
    #[doc = " start again soon.  If this is not desired, call vnc_Server_disconnectAll()"]
    #[doc = " without the @ref vnc_Server_DisconnectReconnect flag before destroying"]
    #[doc = " the Server."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    pub fn vnc_Server_destroy(server: *mut vnc_Server);
}
extern "C" {
    #[doc = " Sets connection-related callbacks for the Server."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param callback The new connection event callback."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call"]
    #[doc = " vnc_getLastError() to get the error code."]
    pub fn vnc_Server_setConnectionCallback(
        server: *mut vnc_Server,
        callback: *const vnc_Server_ConnectionCallback,
        userData: *mut ::std::os::raw::c_void,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Returns the total number of Viewers currently connected to the Server."]
    #[doc = ""]
    #[doc = " @since 1.1"]
    pub fn vnc_Server_getConnectionCount(server: *mut vnc_Server) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets security-related callbacks for the Server."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param callback The new security event callback."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call"]
    #[doc = " vnc_getLastError() to get the error code."]
    pub fn vnc_Server_setSecurityCallback(
        server: *mut vnc_Server,
        callback: *const vnc_Server_SecurityCallback,
        userData: *mut ::std::os::raw::c_void,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Changes permissions for a Viewer mid-session."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param connection The Viewer whose permissions to change."]
    #[doc = " @param perms Any combination of the @ref vnc_Server_Permissions flags, or"]
    #[doc = "     0 (no permissions) to render the session ineffective."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call"]
    #[doc = " vnc_getLastError() to get the error code."]
    pub fn vnc_Server_setPermissions(
        server: *mut vnc_Server,
        connection: *mut vnc_Connection,
        perms: ::std::os::raw::c_int,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Gets the set of current permissions for a Viewer."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param connection The Viewer whose permissions to get."]
    #[doc = ""]
    #[doc = " @return Zero or more of the @ref vnc_Server_Permissions flags."]
    pub fn vnc_Server_getPermissions(
        server: *mut vnc_Server,
        connection: *mut vnc_Connection,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets agent-related callbacks for the Server."]
    #[doc = ""]
    #[doc = " These are not used on Android."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param callback The new agent event callback."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call"]
    #[doc = "     vnc_getLastError() to get the error code."]
    #[doc = ""]
    #[doc = " @since 1.1"]
    pub fn vnc_Server_setAgentCallback(
        server: *mut vnc_Server,
        callback: *const vnc_Server_AgentCallback,
        userData: *mut ::std::os::raw::c_void,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Determines if the @c vncagent process is ready and available to capture the"]
    #[doc = " display and inject input events."]
    #[doc = ""]
    #[doc = " If the @c vncagent is not ready, then the display cannot be captured at present."]
    #[doc = " This could be because it is starting up or being restarted due to a user"]
    #[doc = " logout, or an error. On Linux, this can also indicate that the X server is"]
    #[doc = " not running. On Android, @c vncagent is not used and this function will always"]
    #[doc = " return #vnc_true."]
    #[doc = ""]
    #[doc = " See vnc_Server_setAgentCallback() for receiving callbacks when the agent"]
    #[doc = " process starts and stops."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = ""]
    #[doc = " @retval #vnc_true"]
    #[doc = "     The @c vncagent process is ready"]
    #[doc = ""]
    #[doc = " @retval #vnc_false"]
    #[doc = "     The @c vncagent process is not ready or not running."]
    #[doc = ""]
    #[doc = " @since 1.1"]
    pub fn vnc_Server_isAgentReady(server: *mut vnc_Server) -> vnc_bool_t;
}
